# kafka_event_aggregator

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  config_example.toml  crates.js  help.html  index.html  settings.html  src-files.js
.github/: release.yml
.github/workflows/: build.yml  containerfile_upload.yml
benches/: aggregation.rs
kafka_event_aggregator/: all.html  index.html  sidebar-items.js
kafka_event_aggregator/config/: index.html  sidebar-items.js  struct.AggregatorConfig.html
kafka_event_aggregator/fake_events/: fn.make_fake_flatbuffers_encoded_events.html  index.html  sidebar-items.js
kafka_event_aggregator/frame/: index.html  sidebar-items.js  struct.Event.html  struct.Frame.html
kafka_event_aggregator/kafka/: fn.get_most_recent_message_id.html  fn.make_consumer.html  fn.make_producer.html  index.html  sidebar-items.js
kafka_event_aggregator/metrics/: constant.INCOMING_MESSAGES_DROPPED.html  constant.INCOMING_MESSAGES_PROCESSED.html  constant.INCOMING_MESSAGE_SIZE.html  constant.INCOMING_NEUTRON_EVENTS.html  constant.LATEST_MESSAGE_ID.html  constant.OUTGOING_DROPPED_FRAMES.html  constant.OUTGOING_DROPPED_NEUTRON_EVENTS.html  constant.OUTGOING_FRAMES.html  constant.OUTGOING_KAFKA_ERRORS.html  constant.OUTGOING_MESSAGES.html  constant.OUTGOING_MESSAGE_SIZE.html  constant.OUTGOING_NEUTRON_EVENTS.html  constant.QUEUE_FRAMES.html  fn.initialize_metrics.html  index.html  sidebar-items.js  struct.IncomingMessageDropReason.html  struct.OutgoingFrameDropReason.html
kafka_event_aggregator/output_message/: index.html  sidebar-items.js  struct.OutputMessage.html
kafka_event_aggregator/queue/: index.html  sidebar-items.js  struct.FrameQueue.html
search.index/: 02c4684ac5a1.js  0731749cea.js  09dc07a79a.js  0dc2124382d3.js  109b32890135.js  176d254b58e5.js  1a3fedc05303.js  21141142c8e0.js  2294ed9783.js  249060ca85.js  2bb6eba0dfe6.js  2ef47c2b4d.js  2faf40d4d2.js  33cc6793c4.js  35ca9573165b.js  35d3067b76.js  38d83daba39e.js  397e0ed3ca.js  3aa04d2d111b.js  3aaee61bc005.js  3dcb7df2891e.js  3e4aacffb77a.js  3f7d91a6e8.js  4134ac339b.js  45af33c5dea1.js  46cfa00e43de.js  4997296748.js  4abe08856f.js  4adb1aff8d.js  4b95bfe6ca.js  4bb9017bfb54.js  4f8cd9a13914.js  50b31df92a.js  515befe41c36.js  538a732851.js  54cfdb8f40.js  56d1011744a1.js  64a5184a219c.js  64c906bab6.js  668745975e.js  (+4 more)
search.index/crateNames/: 027efcf1d447.js
search.index/desc/: 9f33ab92578b.js  c8ad3bab05.js
search.index/entry/: 25973b9a2fe6.js  a797c85f37.js
search.index/function/: 27469a0fc9.js  b9822a710983.js
search.index/generic_inverted_index/: 466447f751.js  (+1 more)
src/: config.rs  deserialization.rs  fake_events.rs  frame.rs  kafka.rs  lib.rs  main.rs  metrics.rs  outgoing_message.rs  output_message.rs  queue.rs
(+28 files in other folders)
